# gromaq

./: .impeccable.md  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  GOOD_FIRST_ISSUES.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  TESTING.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
benches/: parser_throughput.rs
documentation/: architecture.md  benchmarks.md  compatibility.md  goal.md  release.md  theme.md
scripts/: capture-macos-window-proof.sh  capture-pages-terminal-recording.sh  generate-checksums.sh  install.sh  notarize-macos-app.sh  package-debian-deb.sh  package-linux-tarball.sh  package-macos-app.sh  prove-144hz-window-perf.sh  prove-arch-package.sh  prove-ci-compatibility-artifacts.sh  prove-current-host-compatibility.sh  prove-debian-package.sh  prove-github-release-install.sh  prove-github-release-macos-install.sh  prove-github-release-publication.sh  prove-linux-desktop-discovery.sh  prove-linux-release-install.sh  prove-local-ci-parity.sh  prove-macos-app-identity.sh  prove-macos-live-input-manual.sh  prove-macos-native-tmux-default-cargo-run.sh  prove-macos-native-tmux-manual.sh  prove-native-tmux-default-snapshot.sh  prove-readme-welcome-preview.sh  prove-theme-preview.sh  prove-welcome-preview.sh
site/: CNAME  check-links.mjs  index.html  robots.txt  scripts.js  site.webmanifest  sitemap.xml  styles.css
src/: app.rs  cell.rs  cli.rs  clipboard.rs  config.rs  dirty.rs  error.rs  font.rs  grid.rs  input.rs  lib.rs  main.rs  mouse.rs  pty.rs  (+6 more)
(+618 files in other folders)
