[package]
name = "gromaq"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Native Rust GPU-rendered terminal emulator foundation for gromaq.dev"
homepage = "https://gromaq.dev"
repository = "https://github.com/vicotrbb/gromaq"
readme = "README.md"
keywords = ["terminal", "gpu", "wgpu", "pty", "emulator"]
categories = ["command-line-utilities"]

[lib]
name = "gromaq"
path = "src/lib.rs"

[[bin]]
name = "gromaq"
path = "src/main.rs"

[[bench]]
name = "parser_throughput"
harness = false

[dependencies]
arboard = { version = "3.6.1", default-features = false }
base64 = "0.22.1"
bitflags = { version = "2.10.0", features = ["serde"] }
pollster = "0.4.0"
portable-pty = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
swash = "0.2.9"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
unicode-width = "0.2.2"
vte = "0.15.0"
wgpu = "29.0.3"
winit = "0.30.12"

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.9.0"
